# Home_security

./: README.md  be_main.py  ble_client.py  devices.json
arduino/: reed_led.ino
backend/: be_main.py  ble_client.py  pyproject.toml
backend/backend/: be_main.py  ble_client.py  devices.json
