[tool.poetry]
name = "backend"
version = "0.1.0"
description = "RaspberryPi service that reads state status over bluetooth"
authors = ["anthony <anthonybruno63@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
bleak = "^0.21.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
